# kaggle_gemini_long_context

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  submission.csv
experiment/: Feature Selection.md  auto-feature-engg.ipynb  gemini-long-context.ipynb
pycaret_docs/: Data_Preparation.md  Feature Engineering.md  Scale and Transform.md
