[project]
name = "gemini-long-context"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "fastkaggle>=0.0.8",
    "featuretools>=1.29.0",
    "google-generativeai>=0.8.3",
    "inflection>=0.5.1",
    "kagglehub>=0.3.4",
    "pycaret[analysis,models,parallel]>=3.0.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
]

[tool.uv]
constraint-dependencies = ["kaleido!=0.2.1.post1"]

[dependency-groups]
dev = [
    "ipywidgets>=7.8.5",
    "jupyterlab>=4.2.6",
    "ruff>=0.8.0",
]
